# deskhopl

./: README.md
.github/: README.md
.github/workflows/: build.yml  release.yml
docs/: README.md
src/: CMakeLists.txt  actions.c  handlers.c  hotkeys.h  keyboard.c  main.c  main.h  setup.c  tusb_config.h  tusb_d.c  tusb_descriptors.c  tusb_descriptors.h  tusb_h.c  uart.c  usb.c  user_config.h  utils.c
